# Restaurant-Sales

./: PRD.md  README.md  TODO.md  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_commands.rs  lib.rs  printing.rs
src/components/app/: AddonDrawer.tsx  AnalyticsTab.tsx  AppSidebar.tsx  DashboardTab.tsx  InventoryTab.tsx  LedgerTab.tsx  MenuDrawer.tsx  SettingsTab.tsx  UpdatesTab.tsx  appTypes.ts
src/components/charts/: MonthlyLineChart.tsx  PaymentPieChart.tsx  WeeklyBarChart.tsx
src/components/forms/: AddOrderForm.tsx
src/components/shared/: Badges.tsx  Icon.tsx  KpiCard.tsx  Modal.tsx  Toast.tsx
src/config/: appConfig.ts
src/data/: menu.ts
src/hooks/: useAsyncAction.ts  useChartData.ts  usePrinterSettings.ts  useSalesStats.ts
src/pages/: ManageOrders.tsx
src/services/: db.ts  googleDriveService.ts  menuService.ts  orderService.ts  printerMiddleware.ts  printerService.ts  salesService.ts
src/store/: menuStore.ts  orderStore.ts  salesStore.ts
src/types/: index.ts
src/utils/: currencyUtils.ts  dateUtils.ts  exportUtils.ts  hindi.ts  imageUtils.ts  tauri.ts  uuid.ts
